<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>402</width>
    <height>484</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <property name="documentMode">
   <bool>true</bool>
  </property>
  <widget class="QWidget" name="cw_MainWindow">
   <layout class="QGridLayout" name="gridLayout">
    <item row="1" column="0" colspan="2">
     <widget class="QTextEdit" name="te_Result">
      <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="l_NumCh">
      <property name="text">
       <string>Номер канала:</string>
      </property>
     </widget>
    </item>
    <item row="2" column="1">
     <widget class="QComboBox" name="cbox_NumCh">
      <item>
       <property name="text">
        <string>1</string>
       </property>
      </item>
      <item>
       <property name="text">
        <string>2</string>
       </property>
      </item>
      <item>
       <property name="text">
        <string>3</string>
       </property>
      </item>
     </widget>
    </item>
    <item row="3" column="0">
     <widget class="QLineEdit" name="le_Path">
      <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
    </item>
    <item row="3" column="1">
     <widget class="QPushButton" name="pb_Path">
      <property name="text">
       <string>Выбрать путь</string>
      </property>
     </widget>
    </item>
    <item row="4" column="0" colspan="2">
     <widget class="QPushButton" name="pb_ClearResult">
      <property name="text">
       <string>Очистить результат</string>
      </property>
     </widget>
    </item>
    <item row="5" column="0" colspan="2">
     <widget class="QPushButton" name="pb_Start">
      <property name="text">
       <string>Старт</string>
      </property>
      <property name="flat">
       <bool>false</bool>
      </property>
     </widget>
    </item>
    <item row="0" column="0" colspan="2">
     <widget class="QGroupBox" name="gb_Result">
      <property name="title">
       <string>Результаты выполнения</string>
      </property>
      <layout class="QFormLayout" name="formLayout">
       <item row="0" column="0">
        <widget class="QCheckBox" name="cb_ReadSucces">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
          <string>Считывание завершено</string>
         </property>
         <property name="checkable">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
        <widget class="QCheckBox" name="cb_ProcFileSucces">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
          <string>Файл обработан</string>
         </property>
         <property name="checkable">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="2" column="0">
        <widget class="QCheckBox" name="cb_MaxSucess">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
          <string>Максимумы найдены</string>
         </property>
         <property name="checkable">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="3" column="0">
        <widget class="QCheckBox" name="cb_MinSucess">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
          <string>Минимумы найдены</string>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="mb_MainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>402</width>
     <height>21</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="sb_MainWindow"/>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>pb_ClearResult</sender>
   <signal>clicked()</signal>
   <receiver>te_Result</receiver>
   <slot>clear()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>233</x>
     <y>422</y>
    </hint>
    <hint type="destinationlabel">
     <x>211</x>
     <y>248</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
